# malt-purple-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LOCAL_BENCHMARK.md  README.md  amber-manifest.json5  benchmarks.py  cli.py  conversation.py  executor.py  helper_prompts.py  litellm_backend.py  output.py  prompts.py  pyproject.toml  requirements.txt  server.py
