[project]
name = "purple-agent"
version = "0.1.0"
description = "Simple A2A purple agent for AgentBeats using LiteLLM"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]==0.3.22",
    "litellm>=1.80.11",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
